# stocksense

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: home.py
app/pages/: analytics.py
notebooks/: classification.ipynb  db_analysis.ipynb  eda.ipynb  experiments_class.ipynb  mock_data.ipynb  modeling.ipynb  portfolio_analysis.ipynb  regression.ipynb  report_analysis.ipynb
scripts/: eda.ipynb  install-hooks.sh  main.py
src/config/: __init__.py  data_config.yml  definitions.py
src/database_handler/: __init__.py  handler.py
src/model/: genetic_algorithm.py
src/pipeline/: __init__.py  etl.py  preprocess.py  stock.py
src/utils/: __init__.py  market_scraper.py  scraper_utils.py
stock-sense/config/: data_config.yml  definitions.py
stock-sense/utils/: market_scraper.py
stock_selector/: eda.ipynb  main.py
stock_selector/config/: __init__.py  path_config.yml
stock_selector/pipeline/: __init__.py  data_update.py  etl.py  preprocess.py  stock.py
stocksense/: __init__.py  main.py
stocksense/app/: home.py
stocksense/app/pages/: analytics.py  explore.py  insights.py  overview.py
stocksense/config/: __init__.py  data_config.yml  db_config.yml  definitions.py  manager.py  model_config.yml  modeldev_config.yml  path_config.yml  paths.py  processing_config.yml
stocksense/config/defaults/: db_config.yml  model_config.yml  processing_config.yml  scraping_config.yml
stocksense/database/: __init__.py  connection.py  handler.py  queries.py
stocksense/database_handler/: __init__.py  connection.py  handler.py  queries.py  schema.py
stocksense/model/: __init__.py  genetic_algorithm.py  handler.py  model_handler.py  optuna_optimizer.py  portfolio.py  train.py  utils.py  xgboost_model.py
stocksense/pipeline/: __init__.py  etl.py  preprocess.py  scraper.py
stocksense/scripts/: main.py
stocksense/utils/: __init__.py  scraper.py  scraper_utils.py
stocksense/validation/: schemas.py  validator.py
tests/: __init__.py  conftest.py  test_demo.py  test_etl.py  test_processing.py
tests/fixtures/: cleaned_data.parquet  financial_data.parquet  index_data.parquet  insider_data.parquet  market_data.parquet  processed_data.parquet  stock_data.parquet  vix_data.parquet
