[project]
name = "stocksense"
version = "1.0.1"
description = "Package for value investing and advanced stock analytics"
authors = [
    {name="Francisco Silva", email="francisco3597@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "requests",
    "PyYAML",
    "numpy",
    "polars",
    "loguru",
    "tqdm",
    "streamlit",
    "yfinance",
    "beautifulsoup4",
    "requests_cache",
    "requests_ratelimiter",
    "pyrate_limiter",
    "polars-talib",
    "pygad",
    "xgboost",
    "scikit-learn",
    "plotly",
    "nbformat>=4.2.0",
    "watchdog",
    "ipykernel",
    "shap"
]

[project.optional-dependencies]
dev = ["pytest", "pylint", "pytest-cov", "ruff", "black", "black[jupyter]"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
omit = [
    "*/conftest.py", "*/test*", # omit test files
]

[tool.coverage.report]
fail_under = 80

[tool.setuptools.packages.find]
where = ["stocksense"]

[project.scripts]
stocksense-app = "app.home:main"
stocksense = "main:main"
