[project]
name = "stocksense"
version = "1.0.1"
description = "Package for value investing and advanced stock analytics"
authors = [
    {name="Francisco Silva", email="francisco3597@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests",
    "PyYAML",
    "numpy",
    "polars<1.13.0",
    "loguru",
    "tqdm",
    "streamlit",
    "yfinance",
    "beautifulsoup4",
    "requests_cache",
    "requests_ratelimiter",
    "pyrate_limiter",
    "polars-talib",
    "pygad",
    "xgboost",
    "scikit-learn",
    "plotly",
    "nbformat>=4.2.0",
    "watchdog",
    "ipykernel",
    "shap",
    "pre-commit",
    "pydantic",
    "openpyxl",
    "optuna"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "nbqa", "pytest-mock"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
omit = [
    "*/conftest.py", "*/test*", # omit test files
]

[tool.coverage.report]
fail_under = 80

[tool.setuptools]
packages = ["stocksense"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
]

[project.scripts]
stocksense-app = "stocksense.app.home:main"
stocksense = "stocksense.main:main"
