[metadata]
name = stocksense
version = 0.1
author = Francisco Silva
author_email = francisco3597@gmail.com
description = StockSense stock selection app
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:
package_dir =
    =src

[options.packages.find]
where = src
include = *